--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
                         </div>
 
                         <div class="card-order-product__group --three">
-                          <div class="card-order-product__quantity">1</div>
+                          <div class="card-order-product__quantity" data-name="Кол-во">1</div>
                         </div>
 
                         <div class="card-order-product__group --foure">
-                          <div class="card-order-product__price">8 700</div>
+                          <div class="card-order-product__price" data-name="Сумма">8 700</div>
                         </div>
                       </div>
 
